anotations for cnn

--- a/combined.ipynb
+++ b/combined.ipynb
@@ -903,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a4488b1d",
+   "id": "77b4211d",
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "3a186199",
    "metadata": {},
    "outputs": [
@@ -1186,8 +1186,30 @@
       "Epoch 3/10\n",
       "974/974 [==============================] - 5s 6ms/step - loss: 0.1493 - acc: 0.9389 - precision_m: 0.9316 - recall_m: 0.9091 - f1_m: 0.9096 - val_loss: 0.1990 - val_acc: 0.9240 - val_precision_m: 0.9156 - val_recall_m: 0.9063 - val_f1_m: 0.8972\n",
       "Epoch 4/10\n",
-      "592/974 [=================>............] - ETA: 1s - loss: 0.1107 - acc: 0.9531 - precision_m: 0.9378 - recall_m: 0.9249 - f1_m: 0.9232"
+      "974/974 [==============================] - 5s 6ms/step - loss: 0.1116 - acc: 0.9538 - precision_m: 0.9388 - recall_m: 0.9266 - f1_m: 0.9244 - val_loss: 0.2314 - val_acc: 0.9215 - val_precision_m: 0.9161 - val_recall_m: 0.9025 - val_f1_m: 0.8962\n",
+      "Epoch 5/10\n",
+      "974/974 [==============================] - 6s 6ms/step - loss: 0.0767 - acc: 0.9723 - precision_m: 0.9644 - recall_m: 0.9547 - f1_m: 0.9540 - val_loss: 0.2337 - val_acc: 0.9163 - val_precision_m: 0.9085 - val_recall_m: 0.9011 - val_f1_m: 0.8917\n",
+      "Epoch 6/10\n",
+      "974/974 [==============================] - 5s 6ms/step - loss: 0.0670 - acc: 0.9706 - precision_m: 0.9614 - recall_m: 0.9495 - f1_m: 0.9499 - val_loss: 0.2486 - val_acc: 0.9163 - val_precision_m: 0.9111 - val_recall_m: 0.8996 - val_f1_m: 0.8915\n",
+      "Epoch 7/10\n",
+      "974/974 [==============================] - 5s 5ms/step - loss: 0.0612 - acc: 0.9776 - precision_m: 0.9629 - recall_m: 0.9534 - f1_m: 0.9544 - val_loss: 0.2407 - val_acc: 0.9168 - val_precision_m: 0.9225 - val_recall_m: 0.8885 - val_f1_m: 0.8902\n",
+      "Epoch 8/10\n",
+      "974/974 [==============================] - 5s 5ms/step - loss: 0.0553 - acc: 0.9786 - precision_m: 0.9711 - recall_m: 0.9658 - f1_m: 0.9647 - val_loss: 0.2856 - val_acc: 0.9066 - val_precision_m: 0.8625 - val_recall_m: 0.9375 - val_f1_m: 0.8842\n",
+      "Epoch 9/10\n",
+      "974/974 [==============================] - 5s 5ms/step - loss: 0.0481 - acc: 0.9825 - precision_m: 0.9661 - recall_m: 0.9701 - f1_m: 0.9641 - val_loss: 0.2753 - val_acc: 0.9076 - val_precision_m: 0.8626 - val_recall_m: 0.9413 - val_f1_m: 0.8848\n",
+      "Epoch 10/10\n",
+      "974/974 [==============================] - 5s 5ms/step - loss: 0.0501 - acc: 0.9814 - precision_m: 0.9707 - recall_m: 0.9679 - f1_m: 0.9657 - val_loss: 0.3287 - val_acc: 0.9122 - val_precision_m: 0.8883 - val_recall_m: 0.9163 - val_f1_m: 0.8882\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x7f39787187c0>"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
